--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -1377,7 +1377,7 @@
   background: #383838;
 }
 .p-password-panel .p-password-meter .p-password-strength.weak {
-  background: #f48fb1;
+  background: #ce1618;
 }
 .p-password-panel .p-password-meter .p-password-strength.medium {
   background: #ffe082;
@@ -1450,7 +1450,7 @@
   font-size: 1.143rem;
 }
 .p-rating .p-rating-icon.p-rating-cancel {
-  color: #f48fb1;
+  color: #ce1618;
 }
 .p-rating .p-rating-icon:focus {
   outline: 0 none;
@@ -1467,7 +1467,7 @@
   color: #64b5f6;
 }
 .p-rating:not(.p-disabled):not(.p-readonly) .p-rating-icon.p-rating-cancel:hover {
-  color: #f48fb1;
+  color: #ce1618;
 }
 
 .p-selectbutton .p-button {
@@ -2160,8 +2160,8 @@
 .p-buttonset.p-button-danger > .p-button,
 .p-splitbutton.p-button-danger > .p-button {
   color: #121212;
-  background: #f48fb1;
-  border: 1px solid #f48fb1;
+  background: #ce1618;
+  border: 1px solid #ce1618;
 }
 .p-button.p-button-danger:enabled:hover,
 .p-buttonset.p-button-danger > .p-button:enabled:hover,
@@ -2186,28 +2186,28 @@
 .p-buttonset.p-button-danger > .p-button.p-button-outlined,
 .p-splitbutton.p-button-danger > .p-button.p-button-outlined {
   background-color: transparent;
-  color: #f48fb1;
+  color: #ce1618;
   border: 1px solid;
 }
 .p-button.p-button-danger.p-button-outlined:enabled:hover,
 .p-buttonset.p-button-danger > .p-button.p-button-outlined:enabled:hover,
 .p-splitbutton.p-button-danger > .p-button.p-button-outlined:enabled:hover {
   background: rgba(244, 143, 177, 0.04);
-  color: #f48fb1;
+  color: #ce1618;
   border: 1px solid;
 }
 .p-button.p-button-danger.p-button-outlined:enabled:active,
 .p-buttonset.p-button-danger > .p-button.p-button-outlined:enabled:active,
 .p-splitbutton.p-button-danger > .p-button.p-button-outlined:enabled:active {
   background: rgba(244, 143, 177, 0.16);
-  color: #f48fb1;
+  color: #ce1618;
   border: 1px solid;
 }
 .p-button.p-button-danger.p-button-text,
 .p-buttonset.p-button-danger > .p-button.p-button-text,
 .p-splitbutton.p-button-danger > .p-button.p-button-text {
   background-color: transparent;
-  color: #f48fb1;
+  color: #ce1618;
   border-color: transparent;
 }
 .p-button.p-button-danger.p-button-text:enabled:hover,
@@ -2215,14 +2215,14 @@
 .p-splitbutton.p-button-danger > .p-button.p-button-text:enabled:hover {
   background: rgba(244, 143, 177, 0.04);
   border-color: transparent;
-  color: #f48fb1;
+  color: #ce1618;
 }
 .p-button.p-button-danger.p-button-text:enabled:active,
 .p-buttonset.p-button-danger > .p-button.p-button-text:enabled:active,
 .p-splitbutton.p-button-danger > .p-button.p-button-text:enabled:active {
   background: rgba(244, 143, 177, 0.16);
   border-color: transparent;
-  color: #f48fb1;
+  color: #ce1618;
 }
 
 .p-button.p-button-link {
@@ -2567,35 +2567,35 @@
 
 .p-splitbutton.p-button-danger.p-button-outlined > .p-button {
   background-color: transparent;
-  color: #f48fb1;
+  color: #ce1618;
   border: 1px solid;
 }
 .p-splitbutton.p-button-danger.p-button-outlined > .p-button:enabled:hover,
 .p-splitbutton.p-button-danger.p-button-outlined > .p-button:not(button):not(a):not(.p-disabled):hover {
   background: rgba(244, 143, 177, 0.04);
-  color: #f48fb1;
+  color: #ce1618;
 }
 .p-splitbutton.p-button-danger.p-button-outlined > .p-button:enabled:active,
 .p-splitbutton.p-button-danger.p-button-outlined > .p-button:not(button):not(a):not(.p-disabled):active {
   background: rgba(244, 143, 177, 0.16);
-  color: #f48fb1;
+  color: #ce1618;
 }
 .p-splitbutton.p-button-danger.p-button-text > .p-button {
   background-color: transparent;
-  color: #f48fb1;
+  color: #ce1618;
   border-color: transparent;
 }
 .p-splitbutton.p-button-danger.p-button-text > .p-button:enabled:hover,
 .p-splitbutton.p-button-danger.p-button-text > .p-button:not(button):not(a):not(.p-disabled):hover {
   background: rgba(244, 143, 177, 0.04);
   border-color: transparent;
-  color: #f48fb1;
+  color: #ce1618;
 }
 .p-splitbutton.p-button-danger.p-button-text > .p-button:enabled:active,
 .p-splitbutton.p-button-danger.p-button-text > .p-button:not(button):not(a):not(.p-disabled):active {
   background: rgba(244, 143, 177, 0.16);
   border-color: transparent;
-  color: #f48fb1;
+  color: #ce1618;
 }
 
 .p-carousel .p-carousel-content .p-carousel-prev,
@@ -5718,7 +5718,7 @@
   color: #121212;
 }
 .p-badge.p-badge-danger {
-  background-color: #f48fb1;
+  background-color: #ce1618;
   color: #121212;
 }
 .p-badge.p-badge-lg {
@@ -5843,7 +5843,7 @@
   color: #121212;
 }
 .p-tag.p-tag-danger {
-  background-color: #f48fb1;
+  background-color: #ce1618;
   color: #121212;
 }
 .p-tag .p-tag-icon {
